Added aws-archiver as a submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "patsy-db"]
 	path = patsy-db
 	url = git@github.com:umd-lib/patsy-db.git
+[submodule "aws-archiver"]
+	path = aws-archiver
+	url = git@github.com:umd-lib/aws-archiver.git
